spacing fix

--- a/css/swan-styles.css
+++ b/css/swan-styles.css
@@ -350,9 +350,10 @@ a.list-group-item, button.list-group-item {
 .container-fluid .jumbotron .pull-right {
   background-color: #f1f1f1;
   z-index: 5;
-  margin-top: 6em;
+  margin-top: 150px;
   padding: 15px;
-  left: 5%;
+  position:absolute;
+  right:0;
   color: black;
   height: auto;
   box-shadow: 1px 0px 5px rgba(255, 255, 255, 0.58)
